--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,41 @@
-# Prerequisites
-*.d
-
 # Compiled Object files
-*.slo
-*.lo
 *.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
+*.lo
 *.la
+*.so
+*.dll
+*.dylib
 *.a
-*.lib
-
-# Executables
 *.exe
-*.out
-*.app
+
+# Distributions
+*.zip
+*.tar.gz
+*.tgz
+*.7z
+
+# Build directories
+build/
+bin/
+Debug/
+Release/
+
+# IDE 및 편집기 관련 파일
+.vscode/
+*.swp
+*.~
+*.orig
+*.bak
+.project
+.settings/
+.classpath
+.idea/
+
+# 기타
+*.log
+*.cache
+*.ilk
+*.pdb
+*.idb
+*.sdf
+.DS_Store
